2ヶ所に設定されていたredisの設定を1ヶ所にまとめた
